airflow-docker/logs/hook_dag/transfer_xml/2022-04-19T13:12:36.142499+00:00/1.log
[2022-04-19 13:55:52,095] {taskinstance.py:1037} INFO - Dependencies all met for <TaskInstance: hook_dag.transfer_xml manual__2022-04-19T13:12:36.142499+00:00 [queued]>
[2022-04-19 13:55:52,105] {taskinstance.py:1037} INFO - Dependencies all met for <TaskInstance: hook_dag.transfer_xml manual__2022-04-19T13:12:36.142499+00:00 [queued]>
[2022-04-19 13:55:52,105] {taskinstance.py:1243} INFO - 
--------------------------------------------------------------------------------
[2022-04-19 13:55:52,105] {taskinstance.py:1244} INFO - Starting attempt 1 of 2
[2022-04-19 13:55:52,105] {taskinstance.py:1245} INFO - 
--------------------------------------------------------------------------------
[2022-04-19 13:55:52,113] {taskinstance.py:1264} INFO - Executing <Task(Postgres2File): transfer_xml> on 2022-04-19 13:12:36.142499+00:00
[2022-04-19 13:55:52,116] {standard_task_runner.py:52} INFO - Started process 15248 to run task
[2022-04-19 13:55:52,119] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'hook_dag', 'transfer_xml', 'manual__2022-04-19T13:12:36.142499+00:00', '--job-id', '431', '--raw', '--subdir', 'DAGS_FOLDER/hook_dag.py', '--cfg-path', '/tmp/tmpk1h14fyb', '--error-file', '/tmp/tmpn8j_akug']
[2022-04-19 13:55:52,119] {standard_task_runner.py:77} INFO - Job 431: Subtask transfer_xml
[2022-04-19 13:55:52,167] {logging_mixin.py:109} INFO - Running <TaskInstance: hook_dag.transfer_xml manual__2022-04-19T13:12:36.142499+00:00 [running]> on host 22e04adb6bfa
[2022-04-19 13:55:52,207] {taskinstance.py:1431} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=hook_dag
AIRFLOW_CTX_TASK_ID=transfer_xml
AIRFLOW_CTX_EXECUTION_DATE=2022-04-19T13:12:36.142499+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-04-19T13:12:36.142499+00:00
[2022-04-19 13:55:52,215] {base.py:79} INFO - Using connection to: id: postgres_default. Host: postgres, Port: 5432, Schema: ***, Login: ***, Password: ***, extra: {}
[2022-04-19 13:55:52,241] {taskinstance.py:1282} INFO - Marking task as SUCCESS. dag_id=hook_dag, task_id=transfer_xml, execution_date=20220419T131236, start_date=20220419T135552, end_date=20220419T135552
[2022-04-19 13:55:52,291] {local_task_job.py:154} INFO - Task exited with return code 0
[2022-04-19 13:55:52,331] {base.py:79} INFO - Using connection to: id: postgres_default. Host: postgres, Port: 5432, Schema: ***, Login: ***, Password: ***, extra: {}
[2022-04-19 13:55:52,340] {dbapi.py:225} INFO - Running statement: UPDATE list_flow_log
                    SET q_source=null, q_target=null, t_end=NOW(), status=2, optional_key=null, comment = '{ params.comment }'
                    where id = { ti.xcom_pull(key='row_id') };, parameters: None
[2022-04-19 13:55:52,341] {taskinstance.py:1590} ERROR - Error when executing on_success_callback
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1588, in _run_finished_callback
    task.on_success_callback(context)
  File "/opt/airflow/dags/hook_dag.py", line 90, in task_success_log
    return log_end.execute(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 71, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "{"
LINE 3:                     where id = { ti.xcom_pull(key='row_id') ...
                                       ^

[2022-04-19 13:55:52,365] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
